# kaggle

./: .gitignore
.claude/: settings.local.json
.claude/agents/: kaggle-eda.md  kaggle-ensembler.md  kaggle-feature-engineer.md  kaggle-model-trainer.md  kaggle-orchestrator.md  kaggle-researcher.md
.claude/projects/f--kaggle/memory/: project_customer_churn.md
.claude/skills/competitions/: customer-churn.md
customer-churn/: Dockerfile  config.yaml  docker-compose.yml  program.md  pyproject.toml  run_adversarial.py  run_baseline.py  run_iter10_push.py  run_iter11_lean.py  run_iter12_breakthrough.py  run_iter13_diverse.py  run_iter14_faithful.py  run_iter15_fix.py  run_iter16_autogluon.py  run_iter17_domain.py  run_iter17_fast.py  run_iter17_gpu_fast.py  run_iter17_wild.py  run_iter18_cv_king.py  run_iter3_fast.py  run_iter4.py  run_iter5.py  run_iter5_submit.py  run_iter6_blamerx.py  run_iter7_novel.py  run_iter8_tabm.py  run_iter9_improved.py  run_iteration2.py  run_iteration3.py  run_public_blend.py
customer-churn/autogluon_models/ds_sub_fit/sub_fit_ho/: metadata.json
customer-churn/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
customer-churn/catboost_info/learn/: events.out.tfevents
customer-churn/catboost_info/test/: events.out.tfevents
customer-churn/docs/: competition_log.md  top_notebook_analysis.md
customer-churn/experiments/: results.tsv
customer-churn/learnings/: all_learnings.json  feature_importance.json  iteration_001.json  iteration_002.json  iteration_004.json  iteration_006.json  iteration_009.json  iteration_010.json  iteration_011.json  iteration_015.json  iteration_017.json  iteration_020.json  iteration_021.json  iteration_022.json  iteration_023.json
customer-churn/public_subs/: pred_nn_v312.npy  pred_tepair_logit3_v200.npy  test_pred_proba_v102.npy
kaggle-agent/: pyproject.toml
kaggle-agent/src/kaggle_agent/: __init__.py  cli.py  config.py  loop.py
kaggle-agent/src/kaggle_agent/agents/: learning_loop.py  orchestration.py  strategies.py
kaggle-agent/src/kaggle_agent/ensemble/: stacking.py
kaggle-agent/src/kaggle_agent/pipeline/: data.py  features.py  models.py  submission.py  tuning.py
kaggle-agent/src/kaggle_agent/tools/: kaggle_api.py
kaggle-agent/src/kaggle_agent/tracking/: experiments.py
march-madness-2026/: README.md  SOLUTION_WRITEUP.md  dataset.md  description.md  experiments.tsv  features.py  model.py  news_adjustments.py  prepare.py  program.md  pyproject.toml  requirements.txt  research_ensemble.py  research_ft_transformer.py  research_novel.py  research_saint.py  research_tabpfn.py  research_temporal.py  rules.md  run_pipeline.py  safety_eval.py  train.py
nvidia-nemotron-reasoning/: COMPETITION.md  README.md  baseline.py  evaluate.py  experiments.tsv  gpu_worker.py  kaggle_train.ipynb  kaggle_train.py  local_train.py  program.md  pyproject.toml  requirements.txt  run_autoresearch.py  run_loop.py  runpod_setup.sh  train.py
nvidia-nemotron-reasoning/.claude/: settings.local.json
nvidia-nemotron-reasoning/data/: DOWNLOAD_DATA.md
nvidia-nemotron-reasoning/mamba_ssm/: __init__.py
nvidia-nemotron-reasoning/mamba_ssm/ops/triton/: layernorm_gated.py  selective_state_update.py  ssd_combined.py
