[project]
name = "march-madness-2026"
version = "0.1.0"
description = "March Machine Learning Mania 2026 - Autoresearch approach"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "scipy>=1.14.0",
    "kaggle>=1.6.0",
    "torch>=2.9.0",
    "tabpfn>=6.4.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
